--- a/report/hottest.html
+++ b/report/hottest.html
@@ -28,7 +28,7 @@
                 <!-- 内容左边部分 -->
                 <ul>
                     <li>
-                        <a href="">
+                        <a href="./report-a.html">
                             <div class="angle">
                                 <img src="../img/bg8.jpg" alt="">
                                 <div class="pic-txt">
@@ -55,7 +55,7 @@
                     </li>
 
                     <li>
-                        <a href="">
+                        <a href="./report-a.html">
                             <div class="angle">
                                 <img src="../img/bg7.jpg" alt="">
                                 <div class="pic-txt">
@@ -83,7 +83,7 @@
 
 
                     <li>
-                        <a href="">
+                        <a href="./report-a.html">
                             <div class="angle">
                                 <img src="../img/bg6.jpg" alt="">
                                 <div class="pic-txt">
@@ -110,7 +110,7 @@
                     </li>
 
                     <li>
-                        <a href="">
+                        <a href="./report-a.html">
                             <div class="angle">
                                 <img src="../img/bg5.jpg" alt="">
                                 <div class="pic-txt">
@@ -137,7 +137,7 @@
                     </li>
 
                     <li>
-                        <a href="">
+                        <a href="./report-a.html">
                             <div class="angle">
                                 <img src="../img/bg4.jpg" alt="">
                                 <div class="pic-txt">
