--- a/shopping/hottest.html
+++ b/shopping/hottest.html
@@ -27,142 +27,123 @@
             <ul>
                 <li>
                     <a href="">
-                        <img src="../img/g4.jpg" alt="">
-                        <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
-                        <p><span class="sp1">3</span><span class="sp2">3</span></p>
-                        <div></div>
-                    </a>
+                        <img src="../img/g4.jpg" alt=""></a>
+                    <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
+                    <p><span class="sp1" onclick="fn(this)">3</span><span class="sp2">3</span></p>
+                    <div></div>
                 </li>
                 <li>
                     <a href="">
-                        <img src="../img/g3.jpg" alt="">
-                        <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
-                        <p><span class="sp1">3</span><span class="sp2">3</span></p>
-                        <div></div>
-                    </a>
+                        <img src="../img/g3.jpg" alt=""></a>
+                    <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
+                    <p><span class="sp1" onclick="fn(this)">3</span><span class="sp2">3</span></p>
+                    <div></div>
                 </li>
                 <li>
                     <a href="">
-                        <img src="../img/g2.jpg" alt="">
-                        <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
-                        <p><span class="sp1">3</span><span class="sp2">3</span></p>
-                        <div></div>
-                    </a>
+                        <img src="../img/g2.jpg" alt=""></a>
+                    <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
+                    <p><span class="sp1" onclick="fn(this)">3</span><span class="sp2">3</span></p>
+                    <div></div>
+
                 </li>
                 <li>
                     <a href="">
-                        <img src="../img/g1.jpg" alt="">
-                        <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
-                        <p><span class="sp1">3</span><span class="sp2">3</span></p>
-                        <div></div>
-                    </a>
+                        <img src="../img/g1.jpg" alt=""></a>
+                    <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
+                    <p><span class="sp1" onclick="fn(this)">3</span><span class="sp2">3</span></p>
+                    <div></div>
                 </li>
 
                 <li>
                     <a href="">
-                        <img src="../img/g4.jpg" alt="">
-                        <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
-                        <p><span class="sp1">3</span><span class="sp2">3</span></p>
-                        <div></div>
-                    </a>
+                        <img src="../img/g4.jpg" alt=""></a>
+                    <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
+                    <p><span class="sp1" onclick="fn(this)">3</span><span class="sp2">3</span></p>
+                    <div></div>
                 </li>
                 <li>
                     <a href="">
-                        <img src="../img/g3.jpg" alt="">
-                        <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
-                        <p><span class="sp1">3</span><span class="sp2">3</span></p>
-                        <div></div>
-                    </a>
+                        <img src="../img/g3.jpg" alt=""></a>
+                    <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
+                    <p><span class="sp1" onclick="fn(this)">3</span><span class="sp2">3</span></p>
+                    <div></div>
                 </li>
                 <li>
                     <a href="">
-                        <img src="../img/g2.jpg" alt="">
-                        <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
-                        <p><span class="sp1">3</span><span class="sp2">3</span></p>
-                        <div></div>
-                    </a>
+                        <img src="../img/g2.jpg" alt=""></a>
+                    <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
+                    <p><span class="sp1" onclick="fn(this)">3</span><span class="sp2">3</span></p>
+                    <div></div>
+
                 </li>
                 <li>
                     <a href="">
-                        <img src="../img/g1.jpg" alt="">
-                        <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
-                        <p><span class="sp1">3</span><span class="sp2">3</span></p>
-                        <div></div>
-                    </a>
+                        <img src="../img/g1.jpg" alt=""></a>
+                    <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
+                    <p><span class="sp1" onclick="fn(this)">3</span><span class="sp2">3</span></p>
+                    <div></div>
                 </li>
 
                 <li>
                     <a href="">
-                        <img src="../img/g4.jpg" alt="">
-                        <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
-                        <p><span class="sp1">3</span><span class="sp2">3</span></p>
-                        <div></div>
-                    </a>
+                        <img src="../img/g4.jpg" alt=""></a>
+                    <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
+                    <p><span class="sp1" onclick="fn(this)">3</span><span class="sp2">3</span></p>
+                    <div></div>
                 </li>
                 <li>
                     <a href="">
-                        <img src="../img/g3.jpg" alt="">
-                        <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
-                        <p><span class="sp1">3</span><span class="sp2">3</span></p>
-                        <div></div>
-                    </a>
+                        <img src="../img/g3.jpg" alt=""></a>
+                    <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
+                    <p><span class="sp1" onclick="fn(this)">3</span><span class="sp2">3</span></p>
+                    <div></div>
                 </li>
                 <li>
                     <a href="">
-                        <img src="../img/g2.jpg" alt="">
-                        <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
-                        <p><span class="sp1">3</span><span class="sp2">3</span></p>
-                        <div></div>
-                    </a>
+                        <img src="../img/g2.jpg" alt=""></a>
+                    <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
+                    <p><span class="sp1" onclick="fn(this)">3</span><span class="sp2">3</span></p>
+                    <div></div>
+
                 </li>
                 <li>
                     <a href="">
-                        <img src="../img/g1.jpg" alt="">
-                        <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
-                        <p><span class="sp1">3</span><span class="sp2">3</span></p>
-                        <div></div>
-                    </a>
+                        <img src="../img/g1.jpg" alt=""></a>
+                    <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
+                    <p><span class="sp1" onclick="fn(this)">3</span><span class="sp2">3</span></p>
+                    <div></div>
                 </li>
 
                 <li>
                     <a href="">
-                        <img src="../img/g4.jpg" alt="">
-                        <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
-                        <p><span class="sp1">3</span><span class="sp2">3</span></p>
-                        <div></div>
-                    </a>
+                        <img src="../img/g4.jpg" alt=""></a>
+                    <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
+                    <p><span class="sp1" onclick="fn(this)">3</span><span class="sp2">3</span></p>
+                    <div></div>
                 </li>
                 <li>
                     <a href="">
-                        <img src="../img/g3.jpg" alt="">
-                        <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
-                        <p><span class="sp1">3</span><span class="sp2">3</span></p>
-                        <div></div>
-                    </a>
+                        <img src="../img/g3.jpg" alt=""></a>
+                    <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
+                    <p><span class="sp1" onclick="fn(this)">3</span><span class="sp2">3</span></p>
+                    <div></div>
                 </li>
                 <li>
                     <a href="">
-                        <img src="../img/g2.jpg" alt="">
-                        <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
-                        <p><span class="sp1">3</span><span class="sp2">3</span></p>
-                        <div></div>
-                    </a>
+                        <img src="../img/g2.jpg" alt=""></a>
+                    <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
+                    <p><span class="sp1" onclick="fn(this)">3</span><span class="sp2">3</span></p>
+                    <div></div>
+
                 </li>
                 <li>
                     <a href="">
-                        <img src="../img/g1.jpg" alt="">
-                        <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
-                        <p><span class="sp1">3</span><span class="sp2">3</span></p>
-                        <div></div>
-                    </a>
+                        <img src="../img/g1.jpg" alt=""></a>
+                    <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
+                    <p><span class="sp1" onclick="fn(this)">3</span><span class="sp2">3</span></p>
+                    <div></div>
                 </li>
-
-
-
-
-
-
-
 
             </ul>
             <!-- 加载更多部分 -->
